# bibclean

./: .cproject  .project  ChangeLog  Makefile.in  README  bibclean.c  bibclean.h  bibclean.hlp  bibclean.html  bibclean.ini  bibclean.isbn  bibclean.key  bibclean.man  bibclean.ps  bibclean.reg  bibclean.txt  build-all.sh  ch.h  chek.c  config.hin  configure  configure.in  configure.sed  custom.h  delete.h  do.c  fix.c  fndfil.c  isbn-el-to-bibclean-isbn.awk  isbn.c  isbn.h  isbn.tbl  keybrd.c  keybrd.h  match.c  match.h  option.c  pattern.h  rofvms.awk  romtol.c  (+22 more)
doc/: Makefile  bibclean.aux  bibclean.bbl  bibclean.bib  bibclean.dvi  bibclean.idx  bibclean.ilg  bibclean.ind  bibclean.lot  bibclean.ltx  bibclean.ps  bibclean.sok  bibclean.sty  bibclean.toc  is-plain.bst  ltugboat.sty  path.sty  tugboat.cmn
ibmpc/dos/: README
ibmpc/dos/msc5p1/: ibmtest.bat  msc51bld.bat  msc51pth.bat
ibmpc/dos/msc6p0/: bibclean.map  msc60bld.bat  msc60pth.bat
ibmpc/dos/msc7p0/: config.h  msc70bld.bat  msc70pth.bat
ibmpc/dos/tcc2p0/: config.h  tcc20bld.bat  tcc20pth.bat
ibmpc/dos/tcc3p0/: tcc30bld.bat
ibmpc/dos/tpp3p0/: tcc30pth.bat  tpp30bld.bat
ibmpc/dos/wat10/wcc/: bibclean.map  config.h  ibmclean.bat  ibmtest.bat  watcpp.bat  watwcc.bat
ibmpc/dos/wat10/wcc386/: dos4gw.doc  wat10bld.bat  watpath.bat
ibmpc/dos/wat10/wpp386/: w386cpp.bat
ibmpc/linux/: bibclean
save/: Makefile  config.h  config.hin  configure  custom.h
test/: romtol.in  testbib1.bib  testbib3.bib  testbib4.bib  testbib4.opt  testbib5.bib  testbib6.bib  testbib7.bib  testbib7.opt  testcodn.bib  testisxn.bib  testltx1.ltx  testopt1.opt  testopt2.opt  testopt3.opt  testopt4.opt  testopt5.opt  testopt6.opt  testopt8.opt  testopta.opt  testoptb.opt  testoptc.opt  testoptd.opt  testopte.opt  testoptf.opt  testoptg.opt  testopth.opt  testoptl.bib  testoptm.bib  testoptn.bib  testopto.bib  testoptp.bib  testoptq.bib  testoptr.bib  testoptr.opt  testopts.bib  testopts.opt  testoptt.bib  testoptu.bib  testoptu.opt  (+133 more)
test/okay/: match.out  romtol.out  testbib1.err  testbib1.out  testbib2.err  testbib2.out  testbib3.err  testbib3.out  testbib4.out  testbib5.err  testbib5.out  testbib6.err  testbib6.out  testbib7.err  testbib7.out  testcodn.err  testcodn.out  testisxn.err  testisxn.out  testltx1.bbl  testltx1.blg  testltx1.err  testopt5.err  testopt6.err  testopta.err  testopte.err  testoptj.err  testoptk.err  testoptl.out  testoptm.err  testoptm.out  testoptn.err  testoptn.out  testopto.err  testopto.out  testoptp.err  testoptp.out  testoptq.err  testoptq.out  testoptr.out  (+27 more)
vms/: config.h
vms/alpha/: recomp.com  vmsclean.com  vmsmake.com  vmstest.com
vms/vax/: README  config.h  getoneheader.com  getvmsheaders.com  recomp.com  vmsclean.com  vmsmake.com  vmstest.com
